fixed grid column wrapping

--- a/SecCure/frontend/static/css/index2.css
+++ b/SecCure/frontend/static/css/index2.css
@@ -102,7 +102,7 @@ div.right-child{
 }
 .grid-container {
   display: grid;
-  grid-template-columns: repeat(auto-fill, minmax(450px, 1fr));
+  grid-template-columns: repeat(auto-fill, minmax(440px, 1fr));
   grid-gap: 10px;
 }
 /* .float-container {
